# Graph_generator

./: .gitignore  Cargo.toml  README.md  build.rs
resources/: resources.gresource.xml  window.ui
src/: com.simomaster1.GraphGenerator.gschema.xml  main.rs
src/drawing/: imp.rs  mod.rs
src/edge_object/: imp.rs  mod.rs
src/node_object/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
