[package]
name = "graph_generator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_12"] }
dark-light = "2.0.0"

[build-dependencies]
glib-build-tools = "0.20.0"
